--- a/app/assets/stylesheets/components/_banner1.scss
+++ b/app/assets/stylesheets/components/_banner1.scss
@@ -56,6 +56,11 @@
   .bloco p {
     font-size: 14px;
   }
+
+  .bloco {
+    padding-right: 60px;
+    padding-left: 60px;
+  }
 }
 
 
