--- a/app/assets/stylesheets/components/_banner2.scss
+++ b/app/assets/stylesheets/components/_banner2.scss
@@ -1,7 +1,6 @@
 
 .banner2 {
   height: calc(100vh - 70px);
-  padding-bottom: calc(70px + 50px + 37px);
 
   h1 {
     margin-bottom: 2rem;
